# cv2show

./: pyproject.toml
cv2show/: _ref.py
cv2util/: cv2show.py  cv2vid.py
tests/: test_cv2show.py  test_cv2util.py
