[tool.poetry]
name = "cv2util"
version = "0.1.0"
description = "A utility library for OpenCV-Python"
authors = ["Hyunseok Lim <hyunseoki@ut.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "4.4.0.46"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
